fixed contact form z-index

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -436,6 +436,7 @@ body {
 
 			.collapse.show {
 				visibility: visible;
+				z-index: 400;
 			}
 
 			.collapsing {
